# adventofcode2025

./: CMakeLists.txt  readme.md
day1/: solution1.cpp  solution2.cpp
day2/: solution1.cpp  solution2.cpp
day3/: solution1.cpp  solution2.cpp
day4/: solution1.cpp  solution2.cpp
day5/: solution1.cpp  solution2.cpp
