cmake_minimum_required(VERSION 4.1)
project(adventofcode2025)

set(CMAKE_CXX_STANDARD 26)

add_executable(adventofcode2025 main.cpp)
add_executable(day1a day1/solution1.cpp)
add_executable(day1b day1/solution2.cpp)
add_executable(day2a day2/solution1.cpp)
add_executable(day2b day2/solution2.cpp)
add_executable(day3a day3/solution1.cpp)
add_executable(day3b day3/solution2.cpp)
add_executable(day4a day4/solution1.cpp)
add_executable(day4b day4/solution2.cpp)
add_executable(day5a day5/solution1.cpp)
add_executable(day5b day5/solution2.cpp)
